# obviously

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
obviously/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
person/: apps.py  documents.py  factories.py  filters.py  manager.py  models.py  permissions.py  search_backend.py  serializers.py  urls.py  validator.py  vector_utils.py  views.py
person/migrations/: 0001_initial.py  0002_data_migration.py
person/tests/: conftest.py
person/tests/test_models/: test_person.py  test_role.py
person/tests/test_views/: test_person_viewset.py
